<resources>
    <string name="alert_textview1">ნამდვილად გსურთ თამაშიდან გასვლა?</string>
    <string name="alert_textview2">თამაშიდან გასვლის შემთხვევაში დაიკარგება ყველა მონაცემი</string>
    <string name="yes">კი</string>
    <string name="no">არა</string>
    <string name="app_name">Joker</string>
    <string name="first_player">I მოთამაშე</string>
    <string name="second_player">II მოთამაშე</string>
    <string name="third_player">III მოთამაშე</string>
    <string name="fourth_player">IV მოთამაშე</string>
    <string name="gametype">აირჩიეთ თამაშის ტიპი</string>
    <string name="amoshla">თუ პრემიაზე გადის 2 ან მეტი სხვებს ეშლებათ</string>
    <string name="wyvilebi">წყვილები</string>
    <string name="startbutton">თამაშის დაწყება</string>
    <string name="shevseba">შესავსებად საჭიროა</string>
    <string name="waglejva">წაგლეჯვაა</string>
    <string name="shevsebulia">შევსებულია</string>
    <string name="garda">გარდა</string>
    <string name="passgarda">პას-გარდა</string>
    <string name="shetenva">შეტენვა</string>
    <string name="pass">-</string>
    <string name="on">true</string>
    <string name="off">false</string>
    <string name="ten">10</string>
    <string name="twenty">20</string>
    <string name="thirty">30</string>
    <string name="fourty">40</string>
    <string name="sixty">60</string>
    <string name="seventy">70</string>
    <string name="eighty">80</string>
    <string name="ninety">90</string>
    <string name="fifty">50</string>
    <string name="onehundred">100</string>
    <string name="twohundred">200</string>
    <string name="hundred50">150</string>
    <string name="twohundred50">250</string>
    <string name="threehundred">300</string>
    <string name="threehundred50">350</string>
    <string name="fourhundred">400</string>
    <string name="fourhundred50">450</string>
    <string name="ninehundred">900</string>
    <string name="fivehundred">500</string>
    <string-array name="gametypearray">
        <item>ცხრიანები</item>
        <item>სტანდარტული</item>
        <item>ერთი პულკა ცხრიანები</item>
    </string-array>
    <string name="cxrianebi">ცხრიანები</string>
    <string name="standartuli">სტანდარტული</string>
    <string-array name="cxrianixishtarray">
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>900</item>
    </string-array>
    <string-array name="standartxishtarray">
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>200/500</item>
        <item>x100</item>
    </string-array>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pas">-</string>
    <string name="diezi">#</string>
    <string name="name">name</string>
    <string name="xishti">აირჩიეთ ხიშტი</string>
    <string name="back_to_mainactyvity">მთავარი გვერდი </string>
    <string name="save">შენახვა</string>
    <string name="arigebs">არიგებს</string>
</resources>
