<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/alter-textview1"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/alert_textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/alter-textview2"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="15sp"
        android:text="@string/alert_textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <Button
        android:layout_marginRight="2.5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/histroy_button"
        android:id="@+id/button_no"
        android:textSize="18sp"
        android:text="@string/no"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginLeft="2.5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/histroy_button"
        android:id="@+id/button_yes"
        android:textSize="18sp"
        android:text="@string/yes"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>