<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_marginRight="7dp"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    android:weightSum="3"
    tools:context="com.beriani.user.joker.Activity.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="4"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        tools:ignore="NestedWeights">
  <EditText
      android:textSize="15sp"
      android:backgroundTint="#3e6a94"
      android:textCursorDrawable="@drawable/edittext_cursor"
      android:textColor="#000"
      android:maxLength="12"
      android:inputType="text"
      android:id="@+id/first_edtxt"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:hint="@string/first_player"

      tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <EditText

            android:textSize="15sp"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:backgroundTint="#3e6a94"
            android:maxLength="12"
            android:textColor="#000"
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/second_edtxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/second_player"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText

            android:textSize="15sp"
            android:backgroundTint="#3e6a94"
            android:maxLines="1"
            android:maxLength="12"
            android:textColor="#000"
            android:inputType="text"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:id="@+id/third_edtxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/third_player"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <EditText
            android:textSize="15sp"
            android:backgroundTint="#3e6a94"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:maxLength="12"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000"
            android:id="@+id/fourth_edtxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fourth_player"
            />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="4"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.1"
        tools:ignore="NestedWeights">
        <TextView
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gametype"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.9"
        >
        <Spinner
            android:id="@+id/game_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:entries="@array/gametypearray"
            >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.1"
        >
        <TextView
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/xishti"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.9"
        >
        <Spinner

            android:textAlignment="center"
            android:id="@+id/xisht_spinner"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/cxrianixishtarray"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <CheckBox
                android:buttonTint="#3e6a94"
                android:id="@+id/couple_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="on_couple_swich_click"
                android:text="@string/wyvilebi"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <CheckBox

                android:buttonTint="#3e6a94"
                android:id="@+id/ramove_switch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="on_remove_switch_click"
                android:text="@string/amoshla"
                android:textOff="@string/off"
                android:textOn="@string/on" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:orientation="vertical">


            <Button
                android:textStyle="bold"
                android:layout_weight="1"
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/startbuttonbackgrounddrawable"
                android:text="@string/startbutton"
                android:textColor="#fff"
                android:textSize="22sp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>


